test/data/semantic/bad/redefined_fn.coy
fn f() -> () {
    ()
}

fn f() -> () {
    ()
}

fn main() -> () {
    ()
}
